# realstack

./: .editorconfig  .env.development  .env.example  .env.production.example  .eslintrc.js  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  ENHANCEMENT_PLAN.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package.json
.github/workflows/: ci.yml  deploy.yml  security.yml
.husky/: pre-push
apps/backend/: Dockerfile  Dockerfile.dev  jest.config.js  package.json
apps/frontend/: .browserslistrc  Dockerfile  Dockerfile.dev  jest.config.js  nginx.conf  package.json
contracts/: Cargo.toml
contracts/src/: asset_token.rs  errors.rs  governance.rs  lib.rs  tokenomics.rs
contracts/tests/: realstack.js
docs/: README.md
docs/en/: SUMMARY.md  api_reference.md  architecture.md  asset_verification.md  development.md  development_guide.md  governance.md  i18n_guide.md  testing_guide.md  whitepaper.md
enhancements/: README.md
enhancements/devops/: ci-cd-workflow.yml
enhancements/features/: CrossChainService.js
enhancements/integration/: README.md
enhancements/monitoring/: INTEGRATION.md  MonitoringSetup.md  README.md  docker-compose.monitoring.yml  prometheus.yml  setup.sh
enhancements/performance/: ApiCacheService.js  LazyLoadingRouter.jsx  LoadingFallback.jsx
enhancements/security/: FRONTEND_SECURITY_GUIDE.md  MultiSigWallet.sol  README.md  TimelockContract.sol
enhancements/ux/: ResponsiveAssetCard.jsx
scripts/: pre-push-checks.js
scripts/deployment/: deploy_token.js  (+1 more)
(+99 files in other folders)
